# agent-ready-papers

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  UPGRADING.md  pyproject.toml
agents/: README.md
decisions/: DR-001_core-framing.md  DR-002_confidence-tiers-over-continuous.md  DR-003_narrative-engineering-layer.md  DR-004_registry-model-for-non-empirical-papers.md  DR-005_agent-consumable-papers.md  DR-006_publication-roadmap.md  DR-007_se-identity-upgrade.md  DR-008_empirical-paper-support.md  DR-009_calculation-verification.md  DR-010_provocation-unit-type.md  DR-011_multi-model-review-pattern.md  DR-012_decision-support-artefacts.md  DR-013_license-choice.md  DR-014_provocation-layered-as-opt-in-extension.md  DR-015_rebutting-undercutting-defeater-distinction.md  DR-016_framework-as-authoring-discipline.md  DR-017_typed-verification-core-ownership.md
docs/: THRESHOLDS.md  category-theory-as-design-lens.md  framework-summary.md  non-claude-setup.md
literature/: README.md
literature/sources/: anderson-bell-shirky-2012.md  elsevier-researcher-future-2025.md  equator-gap.md  gregor-2006.md  gupta-2024.md  han-2022-infocracy.md  han-2024-narration.md  helberger-2024.md  hevner-2004.md  jaakkola-2020.md  (+14 more)
templates/: CLAUDE.md  anti-hallucination.md  claim-registry.md  decision-record.md  equation-checker.md  hypothesis-log.md  review-prompt.md  vv-framework.md  writing-guide.md
tests/: conftest.py  test_check_dois.py  test_coverage.py
tools/: README.md  check_dois.py  coverage.py
vv/: cost-log.md  hypothesis-log.md
(+18 files in other folders)
